# LZ_Collection

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: BitReader.hpp  BitWriter.hpp  Coder.hpp  Compressor.hpp  DebugCoder.hpp  Definition.hpp  Dictionary.hpp  Factor.hpp  LZWBinCoder.hpp  LZWCompressor.hpp  LZWDictionary.hpp  MemoryTracker.hpp  QuickSortPar.hpp  RabinKarp.hpp  StreamView.hpp  SuffixArray.hpp  TextCoder.hpp  TimeTracker.hpp
include/ApproxLZ77/: ApproxLZ77BinCoder.hpp  ApproxLZ77Compressor.hpp  BlockTableBasic.hpp  BlockTableSTD.hpp
include/ApproxLZ77Par/: ApproxLZ77ParCompressor.hpp  BlockTablePar.hpp
include/LZ77/: LZ77BinCoder.hpp  LZ77Compressor.hpp  SuffixArray.hpp
include/LZW/: LZTrie.hpp  LZWBinCoder.hpp  LZWCompressor.hpp  LZWDictionary.hpp
paper/: Presentation.html  Presentation.md
paper/images/: approxlz77.drawio  comp.drawio  dynstart1.drawio  dynstart2.drawio  dynstart3.drawio  inittables.drawio  lasvegas_algorithm.drawio  lossless_compression.drawio  lz77.drawio  parallel_initnodes.drawio  parallel_inittables.drawio  parallel_referencescan.drawio  referencescan.drawio  scale.drawio  uml.drawio
paper/thesis/: Erklaerung.tex  acronym.tex  anhang.tex  header.tex  literatur.bib  main.tex
paper/thesis/Chapters/: Algorithmen.tex  Evaluation.tex  Fazit.tex  Grundlagen.tex  anhang.tex  einleitung.tex  erklaerung.tex  titelseite.tex
paper/thesis/References/: diplom.bib
paper/thesis/kapitel/: Experiment.tex  Grundlagen.tex  Kompressionsalgorithmen.tex  anhang.tex  einleitung.tex  hauptteil.tex  titelseite.tex  zusammenfassung.tex
report/: plots_per_file.py  plots_progressive.py  plots_speedup.py  reportToMarkdown.py  report_plotter.py  report_progressive_Approx.LZ77.csv  report_progressive_Approx.LZ77Par.csv  report_progressive_LZ77.csv  report_speedup.csv
source/: BitReader.cpp  BitWriter.cpp  CMakeLists.txt  LZWCompressor.cpp  MemoryTracker.cpp  main.cpp
source/ApproxLZ77/: ApproxLZ77.cpp  ApproxLZ77Compressor.cpp
source/ApproxLZ77Par/: ApproxLZ77ParCompressor.cpp  BlockTablePar.cpp
source/LZ77/: LZ77Compressor.cpp
source/LZW/: LZWCompressor.cpp  LZWDictionary.cpp
tests/: ApproxLZ77CompressorTests.cpp  ApproxLZ77ParCompressorTests.cpp  BitIOTests.cpp  CMakeLists.txt  LZ77CompressorTests.cpp  LZWCompressorTests.cpp  RabinKarpTests.cpp  StatisticsTests.cpp  SuffixArrayTests.cpp
